projects/elements/src/radio/radio.css
:host {
  --cursor: pointer;
  --width: var(--nve-ref-size-400);
  --height: var(--nve-ref-size-400);
  --border-width: var(--nve-ref-border-width-md);
  --border-radius: var(--nve-ref-border-radius-full);
  --border-color: var(--nve-ref-border-color);
  --background: transparent;
  display: inline-block;
}

::slotted(input) {
  width: var(--width) !important;
  height: var(--height) !important;
  cursor: var(--cursor) !important;
  margin: 0 !important;
  position: absolute !important;
  border-radius: var(--border-radius) !important;
  opacity: 0 !important;
  inset: 0 !important;
}

[input] {
  align-items: center;
  position: relative;
}

[input] slot {
  width: var(--width);
  height: var(--height);
  border: var(--border-width) solid var(--border-color);
  background: var(--background);
  border-radius: var(--border-radius);
  display: flex;
  align-items: center;
  justify-content: center;
}

[input] slot::before {
  content: '';
  width: calc(var(--width) / 2);
  height: calc(var(--height) / 2);
  border-radius: var(--border-radius);
}

:host(:state(checked)) {
  --nve-sys-interaction-state-lightness: 0%;
  --border-color: var(--accent-color);
}

:host(:state(checked)) [input] slot::before {
  background: var(--border-color);
}

:host(:state(disabled)) {
  --border-color: var(--nve-sys-interaction-disabled-background);
}

:host(:focus-within) [input] {
  outline: 0 !important;
}

:host(:focus-within) [input] slot {
  outline: Highlight solid 2px !important;
  outline: 5px auto -webkit-focus-ring-color !important;
}

